=head1 NAME

List of significant changes to Test::WriteVariants

=encoding ISO8859-1

=cut

=head2 Test::WriteVariants 0.005 - 19th March 2014

  Removed use of autodie.

=head2 Test::WriteVariants 0.004 - 16th March 2014

  Treat undef for env var as meaning 'ensure not in %ENV'.
  Add control of test_prefix plus assorted fixes.
  Restore search_path param to find_input_test_modules().
  Require at least one variant plugin to be found.

=head2 Test::WriteVariants 0.001 - 15th March 2014

  Initial release based on prototype in https://github.com/perl5-dbi/DBI-Test

=cut